custom train file

--- a/config/config.json
+++ b/config/config.json
@@ -1,6 +1,6 @@
 {
     "bert_model_name": "bert-large-cased",
-    "bert_cache_dir": "/home/mhtuan/work/ee/event-extraction-oneie/bert",
+    "bert_cache_dir": "/home/tuanvm/ee/event-extraction-oneie/bert",
     "multi_piece_strategy": "average",
     "bert_dropout": 0.5,
     "use_extra_bert": true,
@@ -37,11 +37,11 @@
     "relation_directional": false,
     "symmetric_relations": [],
   
-    "train_file": "/home/mhtuan/work/ee/event-extraction-oneie/data/rams/processed-data/oneie/train_oneie.json",
-    "dev_file": "/home/mhtuan/work/ee/event-extraction-oneie/data/rams/processed-data/oneie/dev_oneie.json",
-    "test_file": "/home/mhtuan/work/ee/event-extraction-oneie/data/rams/processed-data/oneie/test_oneie.json",
-    "log_path": "/home/mhtuan/work/ee/event-extraction-oneie/output",
-    "valid_pattern_path": "/home/mhtuan/work/ee/event-extraction-oneie/resource/valid_patterns_rams",
+    "train_file": "/home/tuanvm/ee/event-extraction-oneie/data/rams/processed-data/oneie/train_oneie.json",
+    "dev_file": "/home/tuanvm/ee/event-extraction-oneie/data/rams/processed-data/oneie/dev_oneie.json",
+    "test_file": "/home/tuanvm/ee/event-extraction-oneie/data/rams/processed-data/oneie/test_oneie.json",
+    "log_path": "/home/tuanvm/ee/event-extraction-oneie/output",
+    "valid_pattern_path": "/home/tuanvm/ee/event-extraction-oneie/resource/valid_patterns_rams",
     "ignore_title": false,
     "ignore_first_header": false,
   
@@ -56,7 +56,7 @@
     "warmup_epoch": 5,
     "grad_clipping": 5.0,
   
-    "use_gpu": false,
+    "use_gpu": true,
     "gpu_device": 0,
     "sent_max_length": 128
 }
